resources/testcases_static_checks/tests/negative/isDrpc/terminatingNotDmfaButRmfa.rls
P(!Z, ?X), P(?X, !Z) :- R(?X, ?Y, ?W, ?V, ?U) .
R(?X, ?Y, ?W, ?V, ?U) :- P(?X, ?Y), R(?Y, ?W, ?V, ?U, ?T), C(?T) .

